# WholeMem

./: .gitignore  AGENTS.md  README.md  Standalone WholeMem Service + Streamlit UI + HTTP MCP Transport.md  config.yaml.example  package-lock.json  package.json  pyproject.toml  wholemem_wawd_merge_spec.md
.warp/: .mcp.json
src/wholemem_mcp/: __init__.py  config.py  daemon.py  memory.py  obsidian.py  screenpipe.py  server.py  service.py  summarizer.py
src/wholemem_mcp/fs/: version_store.py  watcher.py
src/wholemem_mcp/oracle/: context.py  oracle.py  restorer.py
src/wholemem_mcp/oracle/backends/: openai_compat.py
src/wholemem_mcp/tasks/: __init__.py  store.py
src/wholemem_mcp/ui/: __init__.py  app.py  menubar.py  run.py
